--- a/logseq/bak/pages/Probability Note 1/2023-06-02T03_10_40.309Z.Desktop.md
+++ b/logseq/bak/pages/Probability Note 1/2023-06-02T03_10_40.309Z.Desktop.md
@@ -8,24 +8,13 @@ sub-category:: probability
 - 里面的 four-of-a-kind 问题，里面提到有两种解法，一种是有序的，一种是无序的
   $\boxed{\boxed{1} \ \boxed{2} \ \dots \ \boxed{52}}$
 	- 有序抽取方法
-		- 先计算所有5张牌全部的 outcomes ：  $52 \cdot 51\cdot50\cdot49\cdot48 = 311,875,200$
-		- 计算 for-of-a-kind, 先假设 kicker 是最后一张牌 $52 \cdot 3 \cdot 2 \cdot  1 \cdot 48$，这里的trick 就是这里有两个顺序需要，第一个是$52 \cdot 3 \cdot 2 \cdot  1$ 这个顺序是固定的，但是可以在任意位置插入 kicker，所以还需要 $52 \cdot 3 \cdot 2 \cdot  1 \cdot 48\cdot 5$
+		- 先计算所有5张牌全部的 outcomes ：  $52*51*50*49*48 = 311,875,200$
+		- 计算 for-of-a-kind, 先假设 kicker 是最后一张牌 $52 \cdot 3 \cdot 2 \cdot  1 \cdot 48$，这里有trick 就是这里有两个顺序需要，第一个是$52 \cdot 3 \cdot 2 \cdot  1$ 这个顺序是固定的，但是可以在任意位置插入 kicker，所以还需要 $52 \cdot 3 \cdot 2 \cdot  1 \cdot 48\cdot 5$
 	- 无序抽取方法
 		- 总共的5张无序的抽取方式是：$\dbinom{52}{5}$
-		- four-of-a-kind 的是 $\dbinom{13}{1} \cdot 48$ 这里的 trick 就是你从任意13张同一花色的牌选出一张时，剩下的3张就自动确认了，当然这里的也可以这样子理解 $\cfrac{52 \cdot 3 \cdot 2 \cdot 1}{4!} = \dbinom{13}{1} = 13$，就是有序取出 4 张牌，然后除以他们的排序的数量
-- ## Independence
-- **Definition (Independence)** Two events $A$ and $B$ are said to **independent** if the
-  \begin{aligned}
-  P(B|A) = P(B).
-  \end{aligned}
-- **Theorem** *Two events* $A$ *and* $B$ *are independent if and only if their probabilities multiply:*
-  \begin{aligned}
-  P(A \text{ and } B) = P(A) \cdot P(B).
-  \end{aligned}
-- **Theorem (Law of Total Probability)** *Let* $A_1, \dots, A_n$ *be a partition of the possible outcomes:*
-  \begin{aligned}
-  P(B) = \sum_{i = i}^{n} P(A_i)P(B|A_i).
-  \end{aligned}
+		- four-of-a-kind 的是 $\dbinom{13}{1} \cdot 48$ 这里的 trick 就是你从任意13张同一花色的牌选出一张时，剩下的3张就自动确认了
+		-
+		-
 - ## Hypergeometric Distribution
 - If a random variable can be described as the number of $➀$'s in $n$ random draws, without replacement, from the box
   $$
